Fullscreen button on video player in egraph page was working weirdly on Android, so removing fullscreen button from video player. Problem solved. Playing the video still goes fullscreen on iPhone.

--- a/modules/front-end/app/assets/stylesheets/_site_footer.less
+++ b/modules/front-end/app/assets/stylesheets/_site_footer.less
@@ -12,6 +12,7 @@
 	.mobile-notices {
 		display: none;
 		p {
+            color: @grayLighter;
             font-size: 7px;
             line-height: 1em;
             margin-bottom: 3px;
@@ -57,9 +58,10 @@
 		color: @grayLighter;
 	}
 	.wide-notices p {
+		color: @grayLighter;
 		font-size: 7px;
-        line-height: 1em;
-        margin-bottom: 3px;
+		line-height: 1em;
+		margin-bottom: 3px;
     }
 
 	.social {
